make code Java 8 compliant